GNOME Bugzilla – Bug 683633
'-' is common in filenames, yet breaks queries
Last modified: 2012-10-29 12:41:08 UTC
Searching for gnome-icons gives no results, despite results matching the string are returned if searched for 'icons'. commandline `tracker-search` gives good results when searching for 'gnome-icons' so it's highly likely in nautilus' parsing code.
I am pretty sure this is fixed in 3.6.1 - please reopen if it's not the case.
There was actually another bug specific to hyphens and the Tracker search engine. I pushed a fix now for that to git.