tracker-engine: treat the search string as a sentence for FTS match

Or the hyphens will be treated as NOT operators instead of word breaks,
which will prevent results from being returned.

https://bugzilla.gnome.org/show_bug.cgi?id=683633